--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 [Settings]
-keywords = the,paper,stone
+keywords = the
 colors = #FFFFFF,#FF5733,#D3D3D3
 gui_fonts = Arial 12,Times 14,ComicSans 10
 
 [TTS Settings]
 tts_enabled = True
 gender = male
+repeat = 1
 rate = 75
 volume = 0.5
-repeat = 1
 
