--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ requests==2.32.3
 scikit-image==0.25.2
 scikit-learn==1.6.1
 scipy==1.15.2
+setuptools==75.8.2
 shapely==2.0.7
 six==1.17.0
 sniffio==1.3.1
