--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ albumentations==1.4.10
 annotated-types==0.7.0
 anyio==4.8.0
 astor==0.8.1
+babel==2.17.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
+chardet==4.0.0
 charset-normalizer==3.4.1
 colorama==0.4.6
 comtypes==1.4.10
@@ -22,11 +24,13 @@ idna==3.10
 imageio @ git+https://github.com/rrrusst/imageio.git@master
 imageio-ffmpeg==0.5.1
 imgaug==0.4.0
+Jinja2==3.0.1
 joblib==1.4.2
 kiwisolver==1.4.8
 lazy_loader==0.4
 lmdb==1.6.2
 lxml==5.3.1
+MarkupSafe==2.0.1
 matplotlib==3.10.1
 networkx==3.4.2
 numpy==1.26.4
@@ -64,6 +68,7 @@ soupsieve==2.6
 termcolor==2.5.0
 threadpoolctl==3.5.0
 tifffile==2025.2.18
+tkcalendar==1.6.1
 tomli==2.2.1
 tqdm==4.67.1
 typing_extensions==4.12.2
